Comment empty repo from the sf-2.7.yaml + some small fixes
Change-Id: Id909b4c13d46277cac2406f48121acf4a4cbdd5f
Co-Authored-By: Nicolas Hicher <nhicher@redhat.com>

--- a/README
+++ b/README
@@ -6,10 +6,11 @@ Add to /etc/koji-hub/hub.conf, [policy] section
 Then restart httpd
 
 ## Prepare runtime for zuul_rpm_build.py
-sudo yum install mock rpmdevtools createrepo python-jinja2
+sudo yum install mock rpm-build rpmdevtools createrepo python-jinja2
 sudo usermod -a -G mock $SUDO_USER
 sudo mkdir /var/lib/sf
 sudo ln -s /home/$SUDO_USER/zuul-rpm-build /var/lib/sf/zuul-rpm-build
+sude sed -i 's/\(%dist .el7\).*/\1/' /etc/rpm/macros.dist
 
 ## Packaging ci:
 
