Add createrepo patch
Change-Id: Icd96494b5228cce1d0136e29161ce714d5931149

--- a/README
+++ b/README
@@ -47,7 +47,10 @@ koji clone-tag tdpw-1.0-centos7-candidate tdpw-1.0-centos7-release
 
 ### Step7 - mash repo
 
-TBD
+zuul_koji_mash.py
+
+If the command failed with: Old data directory exists, please remove: .olddata
+Apply: createrepo.patch
 
 
 ## Tag process:
