--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Add to /etc/koji-hub/hub.conf, [policy] section
 Then restart httpd
 
 ## Prepare runtime for zuul_rpm_build.py
-sudo yum install mock rpm-build rpmdevtools createrepo python-jinja2
+sudo yum install mock rpm-build rpmdevtools createrepo python-jinja2 python-semantic_version python-requests
 sudo rsync -a rpm-gpg/ /etc/pki/rpm-gpg/
 sudo usermod -a -G mock $USER
 sudo mkdir /var/lib/sf
